tests/padded_function_err.c.t.exp
padded_function_err.c.t:5:22: error: Only one {@ call() @} per line is allowed

	{@ func() @} {@ func() @}
                      ^

