tests/padded_function_err.c.t
@ def func():
Hell-o-world
@ end

	{@ func() @} {@ func() @}
